# postgresql-agent-workflow

./: README.md  pyproject.toml
src/agents/: analyst.py  analyst_agent.py  executor.py  executor_agent.py  orchestrator.py  orchestrator_agent.py  postgresql_checker.py  postgresql_writer.py
src/api/: dependencies.py  fastapi.py  main.py  routes.py
src/core/: db.py  workflow.py
src/graph/: workflow_graph.py
