[tool.poetry]
name = "sql-ai-agent"
version = "0.1.0"
description = "SQL DB AI Agent"
authors = ["Abhyuday Luthra"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
faker = "^36.1.1"
langchain = "^0.3.18"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
langchain-community = "^0.3.17"
langgraph = "^0.3.4"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
psycopg = {extras = ["binary"], version = "^3.2.6"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
